--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ body {
     width: 50%;
     background-color: rgba(255, 77, 0, 0.35); }
     body .section-projects .description {
+      overflow: auto;
       padding: 10px 20px;
       padding-left: 20px;
       padding-top: 0;
       float: left;
       position: relative;
-      width: 95%;
+      width: 60%;
+      height: 20vh;
       display: none; }
       body .section-projects .description p {
         text-align: left;
