--- a/css/style.scss
+++ b/css/style.scss
@@ -72,12 +72,15 @@ body {
     width:50%;
     background-color:rgba(255,77,0,.35);
     .description {
+      // background-color: lightblue;
+      overflow: auto;
       padding:10px 20px;
       padding-left:20px;
       padding-top: 0;
       float:left;
       position:relative;
-      width:95%;
+      width:60%;
+      height: 20vh;
       display:none;
       p {
         text-align: left;
