--- a/css/style.css
+++ b/css/style.css
@@ -124,5 +124,22 @@ body {
   body .section-contact {
     height: 50vh;
     width: 100%; } }
+@media only screen and (max-width: 414px) {
+  body .section-title .title {
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding-top: 0px; }
+    body .section-title .title .main-logo {
+      height: 65px; }
+    body .section-title .title h1 {
+      font-size: 20px; }
+    body .section-title .title h2 {
+      font-size: 20px; }
+  body .section-about .about {
+    width: 85%; } }
+@media only screen and (max-width: 375px) {
+  body .section-projects .projects p {
+    font-size: 14px;
+    letter-spacing: 4px; } }
 
 /*# sourceMappingURL=style.css.map */
