--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  letter-spacing: 8px;
+  letter-spacing: 4px;
   text-transform: uppercase;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  color: white; }
   body section {
     float: left;
     position: relative;
-    display: block; }
+    display: block;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; }
   body .section-title {
     height: 50vh;
     width: 50%;
-    background-image: url("../images/background3.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed; }
+    background-image: url("../images/topleft.png");
+    background-size: cover; }
     body .section-title .title {
       width: 70%;
       right: 0;
       position: absolute;
       bottom: 0;
-      color: #0f0f0f;
+      color: white;
       padding: 20px; }
       body .section-title .title .main-logo {
         height: 85px;
@@ -27,8 +30,8 @@ body {
         float: right; }
       body .section-title .title h1 {
         display: block;
-        letter-spacing: 12px;
-        font-weight: 300;
+        letter-spacing: 10px;
+        font-weight: 800;
         font-size: 40px;
         float: right;
         margin: 0;
@@ -42,7 +45,8 @@ body {
   body .section-about {
     height: 50vh;
     width: 50%;
-    background-color: rgba(255, 77, 0, 0.75); }
+    background-image: url("../images/bottomleft.png");
+    background-size: cover; }
     body .section-about .about {
       padding: 20px;
       float: right;
@@ -53,14 +57,15 @@ body {
         text-align: right; }
       body .section-about .about p {
         text-align: right;
-        font-weight: 600;
+        font-weight: 800;
         text-transform: none;
         letter-spacing: 1px;
         font-size: 14px; }
   body .section-projects {
     height: 50vh;
     width: 50%;
-    background-color: rgba(255, 77, 0, 0.35); }
+    background-image: url("../images/topright.png");
+    background-size: cover; }
     body .section-projects .description {
       overflow: auto;
       padding: 10px 20px;
@@ -73,9 +78,8 @@ body {
       display: none; }
       body .section-projects .description p {
         text-align: left;
-        font-weight: 600;
+        font-weight: 800;
         text-transform: none;
-        letter-spacing: 1px;
         font-size: 13.5px; }
     body .section-projects .projects {
       position: absolute;
@@ -84,18 +88,19 @@ body {
       body .section-projects .projects h2 {
         margin: 0; }
       body .section-projects .projects p {
-        letter-spacing: 6px;
+        letter-spacing: 3px;
         padding-top: 10px; }
         body .section-projects .projects p a {
-          color: #000;
+          color: white;
           text-decoration: none; }
           body .section-projects .projects p a:hover {
-            color: #fff;
+            color: black;
             text-decoration: none; }
   body .section-contact {
     height: 50vh;
     width: 50%;
-    background-color: #ff4d00; }
+    background-image: url("../images/bottomright.png");
+    background-size: cover; }
     body .section-contact .contact {
       padding: 20px; }
       body .section-contact .contact h2 {
@@ -103,27 +108,22 @@ body {
       body .section-contact .contact a {
         width: 5%;
         margin-left: 5px;
-        color: #000; }
+        color: white; }
         body .section-contact .contact a i {
           font-size: 32px; }
           body .section-contact .contact a i.fa-file-text-o {
             font-size: 28px; }
         body .section-contact .contact a:hover {
-          color: #fff; }
+          color: black; }
 
 @media only screen and (max-width: 910px) {
-  body .section-title {
-    height: 50vh;
-    width: 100%; }
-  body .section-projects {
-    height: 50vh;
-    width: 100%; }
-  body .section-about {
-    height: 50vh;
-    width: 100%; }
+  body .section-title,
+  body .section-projects,
+  body .section-about,
   body .section-contact {
     height: 50vh;
-    width: 100%; } }
+    width: 100%;
+    background-image: url("../images/topright.png"); } }
 @media only screen and (max-width: 768px) {
   body .section-title {
     height: 50vh;
@@ -140,12 +140,11 @@ body {
 @media only screen and (max-width: 414px) {
   body .section-title .title {
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
     padding-top: 0px; }
     body .section-title .title .main-logo {
       height: 65px; }
     body .section-title .title h1 {
-      font-size: 20px; }
+      font-size: 28px; }
     body .section-title .title h2 {
       font-size: 20px; }
   body .section-about .about {
